css/lynnstyles.css
/* CSS Document */
* {
	padding: 0;
	margin: 0;
	font-weight: normal;
    font-style: normal;
	font-size: 100%;
	text-shadow: 0 0 0 rgba(0,0,0,0)!important;
	}
html {
	/*height:auto;*/
	}
body {
	font-family: "Segoe UI", "Helvetica Neue", Tahoma, Arial!important;
	background-color:#f6f6f6;
	/*min-height:100%;*/
	/*height:100%;*/
	/*overflow-x: hidden;*/
	}
body#landing {
	background-color:#fff;
	}
/*Login Form*/
#loginform label {
	color:#fff;
	}
#loginform h1 {
	font-size:.8em;
	}
#loginform h2 {
	margin:1em 0;
	margin-bottom:0;
	}
main#loginform {
	background-color: #009CDE;
	padding:0;
	}
#loginform button, #loginmodal button {
	margin: 0 auto;
	margin-top: 2em;
	margin-bottom: 2.9em;
	}
#loginmodal button {
	margin-top: 3.5em;
	}
.headlinecontainer {
	text-align: center;
	margin: 3em 0 .8em 0;
	color:#fff;
	line-height: 3em;
	font-size:1.4em;
	}
.headlinecontainer img {
	width: 2.5em;
    vertical-align: middle;
	}
.headlinecontainer h1 {
    font-size: .8em;
	}
.headlinecontainer h2 {
    margin-top: 1em;
	}
.maincontainer {
	padding: 1em 6em;
	padding-top:0;
	}
.maincontainer.bottom {
	height: 4.2em;
	background-color:#eee;
	padding:1em;
	}
#loginform div.psw p {
	margin-bottom: .0;
	line-height: 2.2em;
	}
.insertform {
	background-color:#fff;
	padding-left:0;
	padding-right:0;
	}
p {
    margin-bottom: .7em;
    line-height: 1.5em;
	}
#preferences p {
    margin-top: .2em;
    margin-bottom: 1em;
	}
a {
	color: #004C97;
	cursor: pointer;
	}
a:active, a:hover	 {
	color: #00254b;
	}
a.not-allowed {
	cursor: not-allowed!important;
	}
p#showmarktxt {
	font-family: Palatino, Garamond, Bookman, Avant Garde;
	font-size:2em;
	text-align:center;
	margin-bottom:0;
	}
.uppercase {
	text-transform:uppercase;
	}
#success iframe {
	width:100%;
	min-height:600px;
	margin:0 auto;
	overflow:visible;
	padding:32px;
	}
div#selected {
	width:100%;
	height:100%;
	margin:0;
	overflow:visible;
	}
object#selected {
	width:100%;
	height:100%;
	margin:0;
	overflow:visible;
	}
.img-thumbnail, .thumbnail {
    -webkit-box-shadow: 0 0px 0px rgba(0,0,0,0);
    box-shadow: 0 0px 0px rgba(0,0,0,0);
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	}
.glyphicon {
	top: 2px;
	}
.subtle {
	vertical-align: text-top;
	display: inline-block;
	border-radius: .19em;
	}
.label.subtle {
	padding-top:.35em;
	padding-bottom:.35em;
	}
.label.subtle::before {
	content: ''!important;
	font-size:.8em;
	}
.label-info {
	background-color:#dff0d8;
	color: #555
	}
#dashboardmain .img-thumbnail, #dashboardmain .thumbnail {
    margin: 0 auto;
    float: none;
	}
.popover, .arrow {
	border:none;
	border-bottom-color:transparent!important;
    -webkit-border-top-left-radius: 	2px;
    -webkit-border-top-right-radius: 	2px;
    -webkit-border-bottom-right-radius: 2px;
    -webkit-border-bottom-left-radius: 	2px;
	-moz-border-top-left-radius: 		2px;
    -moz-border-top-right-radius: 		2px;
    -moz-border-bottom-right-radius: 	2px;
    -moz-border-bottom-left-radius: 	2px;
	border-top-left-radius: 			2px;
    border-top-right-radius: 			2px;
    border-bottom-right-radius: 		2px;
    border-bottom-left-radius: 			2px;
	}
.container-fluid {
	font-size: inherit;
	}
.margincontent {
	margin-left:.5em;
	margin-right:.5em;
	}
/*ul#lowernav li a.glyphed:hover {
    background-color: transparent!important;
	color:#F3D54E;
	}
ul#lowernav li a.glyphed {
	color:#9BB8D3!important;
	}
ul#lowernav li a.glyphed:hover, ul#lowernav li a.glyphed:active {
	color:#EEEEEE!important;
	}
ul#lowernav li a.glyphed:focus {
	color:#F3D54E!important;
	}
ul#lowernav li a.glyphed span {
	color:#9BB8D3!important;
	margin-right:.45em;
	top: 1px;
	}
ul#lowernav li a.glyphed span.kerned {
	margin-right:.2em;
	}*/
ul#lowernav li a.glyphed span {
	margin-right:.45em;
	top: 1px;
	}
/* PROGRESS tracker */
section .breadcrumb-steps {
    color: #333333;
    width: 100%;
    font-size: 13px;
	}
.breadcrumb-steps {
    display: table;
    margin: 0 0 40px 0;
    overflow: hidden;
    table-layout: fixed;
    width: 100%;
	}
.displaycell {
	display:table-cell;
	}
.breadcrumb-steps .displaycell > div {
	height:100%;
	}
.breadcrumb-steps .displaycell > div > div > div p {
    height: 50px;
    display: table-cell;
    vertical-align: middle;
	padding-right:22px;
	line-height:1.1em;
	}
.displaytable {
	display:table;
	}
.breadcrumb-steps div {
    padding: 0;
	}
.vertctr {
	display:table;
	height:100%;
	}
.breadcrumb-steps .active span, .breadcrumb-steps .done span {
	-webkit-clip-path: 	polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
	clip-path: 			polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
	position: absolute;
    left: 8px;
	background-color:#004C97;
	background-image: url('../images/stage-active.png');
    background-position: right;
	background-repeat: no-repeat;
	line-height: 50px;
    width: 35px;
    text-align: center;
    font-size: 26px;
    font-weight: bold;
	}
.breadcrumb-steps span {
	-webkit-clip-path: 	polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
	clip-path: 			polygon(20% 0%, 75% 0%, 100% 50%, 75% 100%, 20% 100%);
	position: absolute;
    left: 8px;
	background-color:#D9D9D6;
	line-height: 50px;
    width: 35px;
    text-align: center;
    font-size: 26px;
    font-weight: bold;
	}
.breadcrumb-steps .active {
    color: #fff;
	background-color: #009CDE;
	border-bottom-color: #003c70;
    font-weight: bold;
	}
.breadcrumb-steps .done {
    color: #accbd8;
	background-color: #009CDE;
	border-bottom-color: #003c70;
    font-weight: normal;
	}
div.breadcrumb-steps {
    background-color: #1077b9;
    border-bottom-color: #003c70;
    font-weight: bold;
	}
.breadcrumb-steps > div:first-child {
    -webkit-border-radius: 4px 0 0 0;
    -moz-border-radius: 4px 0 0 0;
    border-radius: 4px 0 0 0;
	}
/* ... */

